--- a/src/main/resources/db/hsqldb.properties
+++ b/src/main/resources/db/hsqldb.properties
@@ -3,6 +3,7 @@
 database.url=jdbc:hsqldb:mem:vacancy
 database.username=sa
 database.password=
+database.driverClassName=rg.hsqldb.jdbcDriver
 
 database.init=true
 jdbc.initLocation=classpath:db/initDB_hsql.sql
