--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -5,6 +5,7 @@
 database.url=jdbc:postgresql://localhost:5432/vacancy
 database.username=user
 database.password=password
+database.driverClassName=org.postgresql.Driver
 
 database.init=true
 jdbc.initLocation=classpath:db/initDB.sql
@@ -12,3 +13,4 @@ jdbc.initLocation=classpath:db/initDB.sql
 jpa.showSql=true
 hibernate.format_sql=true
 hibernate.use_sql_comments=false
+#        <property name="driverClassName" value="${database.driverClassName}"/>
