--- a/pom.xml
+++ b/pom.xml
@@ -383,7 +383,7 @@
       <version>${jackson-json.version}</version>
     </dependency>
 
-    <!--Test-->
+    <!--TestStrategy-->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
