--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 
     <spring.version>5.3.0</spring.version>
     <spring-data-jpa.version>2.4.0</spring-data-jpa.version>
+    <spring.security.version>5.3.1.RELEASE</spring.security.version>
     <jackson-json.version>2.11.3</jackson-json.version>
     <tomcat.version>9.0.39</tomcat.version>
 
@@ -62,16 +63,7 @@
           <target>${java.version}</target>
         </configuration>
       </plugin>
-<!--
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.22.2</version>
-        <configuration>
-          <argLine>-Dfile.encoding=UTF-8</argLine>
-        </configuration>
-      </plugin>
--->
+
       <plugin>
         <groupId>org.codehaus.cargo</groupId>
         <artifactId>cargo-maven2-plugin</artifactId>
@@ -114,84 +106,24 @@
 
     </plugins>
   </build>
-<!--
-  <build>
-    <finalName>Vacancy</finalName>
-    <defaultGoal>package</defaultGoal>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
-        <configuration>
-          <source>${java.version}</source>
-          <target>${java.version}</target>
-        </configuration>
-      </plugin>
-      &lt;!&ndash; http://stackoverflow.com/questions/4305935/is-it-possible-to-supply-tomcat6s-context-xml-file-via-the-maven-cargo-plugin#4417945 &ndash;&gt;
-      &lt;!&ndash; https://codehaus-cargo.github.io/cargo/Tomcat+9.x.html &ndash;&gt;
-      <plugin>
-        <groupId>org.codehaus.cargo</groupId>
-        <artifactId>cargo-maven2-plugin</artifactId>
-        <version>1.8.2</version>
-        <configuration>
-          <container>
-            <containerId>tomcat9x</containerId>
-            <systemProperties>
-              <file.encoding>UTF-8</file.encoding>
-              &lt;!&ndash;<spring.profiles.active>tomcat,datajpa</spring.profiles.active>&ndash;&gt;
-            </systemProperties>
-            <dependencies>
-            </dependencies>
-          </container>
-          <configuration>
-            <configfiles>
-              <configfile>
-                <file>src/main/resources/tomcat/context.xml</file>
-                <todir>conf/Catalina/localhost/</todir>
-                <tofile>${project.build.finalName}.xml</tofile>
-              </configfile>
-            </configfiles>
-          </configuration>
-          <deployables>
-            <deployable>
-              <groupId>ua.training</groupId>
-              <artifactId>Vacancy</artifactId>
-              <type>war</type>
-              <properties>
-                <context>${project.build.finalName}</context>
-              </properties>
-            </deployable>
-          </deployables>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.19.1</version>
-        <dependencies>
-          <dependency>
-            <groupId>org.junit.platform</groupId>
-            <artifactId>junit-platform-surefire-provider</artifactId>
-            <version>1.1.0</version>
-          </dependency>
-          <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.1.0</version>
-          </dependency>
-        </dependencies>
-      </plugin>
-    </plugins>
-  </build>
--->
-
 
   <dependencies>
     <dependency>
       <groupId>javax.annotation</groupId>
       <artifactId>javax.annotation-api</artifactId>
       <version>1.3.2</version>
+    </dependency>
+
+    <!--DataBase-->
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>${postgresql.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.hsqldb</groupId>
+      <artifactId>hsqldb</artifactId>
+      <version>2.3.4</version>
     </dependency>
 
     <!-- Logging with SLF4J & LogBack -->
@@ -217,7 +149,6 @@
     </dependency>
 
     <!-- Spring -->
-<!--
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-context</artifactId>
@@ -238,19 +169,6 @@
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
     </dependency>
--->
-
-    <!--DataBase-->
-    <dependency>
-      <groupId>org.postgresql</groupId>
-      <artifactId>postgresql</artifactId>
-      <version>${postgresql.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.hsqldb</groupId>
-      <artifactId>hsqldb</artifactId>
-      <version>2.3.4</version>
-    </dependency>
 
     <!-- Spring -->
     <dependency>
@@ -261,6 +179,18 @@
       <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-jpa</artifactId>
       <version>${spring-data-jpa.version}</version>
+    </dependency>
+
+    <!-- Spring security -->
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-web</artifactId>
+      <version>${spring.security.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-config</artifactId>
+      <version>${spring.security.version}</version>
     </dependency>
 
     <!--- ORM -->
@@ -287,6 +217,13 @@
       <version>${javax-el.version}</version>
       <scope>provided</scope>
     </dependency>
+    <!--https://medium.com/criciumadev/its-time-migrating-to-java-11-5eb3868354f9-->
+    <dependency>
+      <groupId>org.glassfish.jaxb</groupId>
+      <artifactId>jaxb-runtime</artifactId>
+      <version>2.4.0-b180830.0438</version>
+    </dependency>
+
 
     <!-- Cache -->
     <dependency>
@@ -299,13 +236,6 @@
       <artifactId>ehcache</artifactId>
       <scope>runtime</scope>
       <version>${ehcache.version}</version>
-    </dependency>
-
-    <!--https://medium.com/criciumadev/its-time-migrating-to-java-11-5eb3868354f9-->
-    <dependency>
-      <groupId>org.glassfish.jaxb</groupId>
-      <artifactId>jaxb-runtime</artifactId>
-      <version>2.4.0-b180830.0438</version>
     </dependency>
 
     <!--Web-->
@@ -321,12 +251,6 @@
       <artifactId>jstl</artifactId>
       <version>1.2</version>
     </dependency>
-
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-webmvc</artifactId>
-    </dependency>
-
 
     <!-- Webjars (static dependencies distributed as JAR files) -->
     <dependency>
@@ -350,6 +274,7 @@
         </exclusion>
       </exclusions>
     </dependency>
+
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>datatables</artifactId>
