--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,10 @@
          version="4.0">
 
   <display-name>Vacancy</display-name>
+  <context-param>
+    <param-name>spring.profiles.default</param-name>
+    <param-value>postgres</param-value>
+  </context-param>
 
   <context-param>
     <param-name>contextConfigLocation</param-name>
