--- a/src/main/resources/db/heroku.properties
+++ b/src/main/resources/db/heroku.properties
@@ -1,5 +1,6 @@
 jpa.showSql=false
 hibernate.format_sql=false
 hibernate.use_sql_comments=false
+hibernate.dialect = org.hibernate.dialect.MySQLDialect
 database.init=false
 jdbc.initLocation=initDB.sql
