--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,8 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
+         http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>ua.training</groupId>
@@ -17,8 +20,8 @@
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
     <spring.version>5.3.0</spring.version>
+    <spring.security.version>5.4.1</spring.security.version>
     <spring-data-jpa.version>2.4.0</spring-data-jpa.version>
-    <spring.security.version>5.3.1.RELEASE</spring.security.version>
     <jackson-json.version>2.11.3</jackson-json.version>
     <tomcat.version>9.0.41</tomcat.version>
 
@@ -28,28 +31,29 @@
 
     <!--DB-->
     <postgresql.version>42.2.17</postgresql.version>
-
     <!--    Tests  -->
     <junit.jupiter.version>5.7.0</junit.jupiter.version>
     <assertj.version>3.17.2</assertj.version>
     <hamcrest.version>2.2</hamcrest.version>
+    <json-path.version>2.5.0</json-path.version>
 
     <!-- Hibernate -->
     <hibernate.version>5.4.22.Final</hibernate.version>
     <hibernate-validator.version>6.1.6.Final</hibernate-validator.version>
+    <jsoup.version>1.13.1</jsoup.version>
     <javax-el.version>3.0.1-b12</javax-el.version>
-
 
     <!--Cache-->
     <ehcache.version>3.9.0</ehcache.version>
+
     <!--webjars-->
     <webjars-bootstrap.version>4.5.3</webjars-bootstrap.version>
     <webjars-jquery.version>3.5.1</webjars-jquery.version>
     <webjars-datetimepicker.version>2.5.20-1</webjars-datetimepicker.version>
     <webjars-noty.version>3.1.4</webjars-noty.version>
     <webjars-datatables.version>1.10.21</webjars-datatables.version>
-
   </properties>
+
 
   <build>
     <finalName>Vacancy</finalName>
@@ -109,27 +113,6 @@
   </build>
 
   <dependencies>
-
-    <!--tomcat pools-->
-    <dependency>
-      <groupId>org.apache.tomcat</groupId>
-      <artifactId>tomcat-jdbc</artifactId>
-      <version>9.0.41</version>
-    </dependency>
-
-    <dependency>
-      <groupId>javax.annotation</groupId>
-      <artifactId>javax.annotation-api</artifactId>
-      <version>1.3.2</version>
-    </dependency>
-
-    <!--DataBase-->
-    <dependency>
-      <groupId>org.postgresql</groupId>
-      <artifactId>postgresql</artifactId>
-      <version>${postgresql.version}</version>
-    </dependency>
-
     <!-- Logging with SLF4J & LogBack -->
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -139,39 +122,16 @@
     </dependency>
 
     <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>jul-to-slf4j</artifactId>
-      <version>${slf4j.version}</version>
-      <scope>runtime</scope>
-    </dependency>
-
-    <dependency>
       <groupId>ch.qos.logback</groupId>
       <artifactId>logback-classic</artifactId>
       <version>${logback.version}</version>
       <scope>runtime</scope>
     </dependency>
 
-    <!-- Spring -->
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-context</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-orm</artifactId>
-      <version>${spring.version}</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.security</groupId>
-      <artifactId>spring-security-test</artifactId>
-      <version>${spring.security.version}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-webmvc</artifactId>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>1.3.2</version>
     </dependency>
 
     <!-- Spring -->
@@ -184,7 +144,6 @@
       <artifactId>spring-data-jpa</artifactId>
       <version>${spring-data-jpa.version}</version>
     </dependency>
-
     <!--swagger-->
     <dependency>
       <groupId>io.springfox</groupId>
@@ -197,7 +156,7 @@
       <version>2.9.2</version>
     </dependency>
 
-    <!-- Spring security -->
+    <!-- security -->
     <dependency>
       <groupId>org.springframework.security</groupId>
       <artifactId>spring-security-web</artifactId>
@@ -214,7 +173,6 @@
       <version>${spring.security.version}</version>
     </dependency>
 
-
     <!--- ORM -->
     <dependency>
       <groupId>org.hibernate</groupId>
@@ -225,6 +183,11 @@
       <groupId>org.hibernate.validator</groupId>
       <artifactId>hibernate-validator</artifactId>
       <version>${hibernate-validator.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>${jsoup.version}</version>
     </dependency>
     <dependency>
       <groupId>org.hibernate</groupId>
@@ -239,13 +202,6 @@
       <version>${javax-el.version}</version>
       <scope>provided</scope>
     </dependency>
-    <!--https://medium.com/criciumadev/its-time-migrating-to-java-11-5eb3868354f9-->
-    <dependency>
-      <groupId>org.glassfish.jaxb</groupId>
-      <artifactId>jaxb-runtime</artifactId>
-      <version>2.4.0-b180830.0438</version>
-    </dependency>
-
 
     <!-- Cache -->
     <dependency>
@@ -260,6 +216,13 @@
       <version>${ehcache.version}</version>
     </dependency>
 
+    <!--https://medium.com/criciumadev/its-time-migrating-to-java-11-5eb3868354f9-->
+    <dependency>
+      <groupId>org.glassfish.jaxb</groupId>
+      <artifactId>jaxb-runtime</artifactId>
+      <version>2.4.0-b180830.0438</version>
+    </dependency>
+
     <!--Web-->
     <dependency>
       <groupId>org.apache.tomcat</groupId>
@@ -272,6 +235,11 @@
       <groupId>javax.servlet</groupId>
       <artifactId>jstl</artifactId>
       <version>1.2</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-webmvc</artifactId>
     </dependency>
 
     <!-- Webjars (static dependencies distributed as JAR files) -->
@@ -296,7 +264,6 @@
         </exclusion>
       </exclusions>
     </dependency>
-
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>datatables</artifactId>
@@ -336,35 +303,25 @@
       <version>${jackson-json.version}</version>
     </dependency>
 
-    <!--TestStrategy-->
+    <!--Test-->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-engine</artifactId>
       <version>${junit.jupiter.version}</version>
       <scope>test</scope>
     </dependency>
-
     <dependency>
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest-core</artifactId>
       <version>${hamcrest.version}</version>
       <scope>test</scope>
     </dependency>
-
     <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-test</artifactId>
+      <groupId>com.jayway.jsonpath</groupId>
+      <artifactId>json-path</artifactId>
+      <version>${json-path.version}</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>org.assertj</groupId>
-      <artifactId>assertj-core</artifactId>
-      <version>${assertj.version}</version>
-      <scope>test</scope>
-    </dependency>
-
-    <!-- https://mvnrepository.com/artifact/junit/junit -->
-
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -372,11 +329,26 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>org.jsoup</groupId>
-      <artifactId>jsoup</artifactId>
-      <version>1.12.1</version>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-test</artifactId>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.springframework.security</groupId>
+      <artifactId>spring-security-test</artifactId>
+      <version>${spring.security.version}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>${assertj.version}</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
+
 
   <profiles>
 
