--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,8 @@
 
     <!--DB-->
     <postgresql.version>42.2.17</postgresql.version>
+    <hsqldb.version>2.5.1</hsqldb.version>
+
     <!--    Tests  -->
     <junit.jupiter.version>5.7.0</junit.jupiter.version>
     <assertj.version>3.17.2</assertj.version>
@@ -113,6 +115,18 @@
   </build>
 
   <dependencies>
+
+    <dependency>
+      <groupId>org.postgresql</groupId>
+    <artifactId>postgresql</artifactId>
+    <version>${postgresql.version}</version>
+  </dependency>
+  <dependency>
+    <groupId>org.hsqldb</groupId>
+    <artifactId>hsqldb</artifactId>
+    <version>${hsqldb.version}</version>
+  </dependency>
+
     <!-- Logging with SLF4J & LogBack -->
     <dependency>
       <groupId>org.slf4j</groupId>
@@ -351,6 +365,17 @@
 
 
   <profiles>
+
+    <profile>
+      <id>hsqldb</id>
+      <dependencies>
+        <dependency>
+          <groupId>org.hsqldb</groupId>
+          <artifactId>hsqldb</artifactId>
+          <version>2.5.1</version>
+        </dependency>
+      </dependencies>
+    </profile>
 
     <profile>
       <id>postgres</id>
