--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -13,3 +13,4 @@ jdbc.initLocation=classpath:db/initDB.sql
 jpa.showSql=true
 hibernate.format_sql=true
 hibernate.use_sql_comments=false
+hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
