--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,7 +7,7 @@
   <display-name>Vacancy</display-name>
   <context-param>
     <param-name>spring.profiles.default</param-name>
-    <param-value>h2db</param-value>
+    <param-value>postgres</param-value>
   </context-param>
 
   <context-param>
