--- a/pom.xml
+++ b/pom.xml
@@ -19,21 +19,22 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-    <spring.version>5.3.23</spring.version>
+    <spring.version>5.3.20</spring.version>
     <spring.security.version>5.7.5</spring.security.version>
     <spring-data-jpa.version>2.7.5</spring-data-jpa.version>
 
+    <springfox-swagger.version>2.9.2</springfox-swagger.version>
     <jackson-json.version>2.14.0</jackson-json.version>
-    <tomcat.version>9.0.68</tomcat.version>
+    <tomcat.version>9.0.41</tomcat.version>
 
     <!-- Logging -->
     <logback.version>1.4.4</logback.version>
     <slf4j.version>2.0.3</slf4j.version>
-
+    <javax-annotation-api.version>1.3.2</javax-annotation-api.version>
     <!--DB-->
-    <postgresql.version>42.2.17</postgresql.version>
+    <postgresql.version>42.2.14</postgresql.version>
     <hsqldb.version>2.7.0</hsqldb.version>
-    <h2database.version>2.1.210</h2database.version>
+    <h2database.version>1.4.200</h2database.version>
 
     <!--    Tests  -->
     <junit.jupiter.version>5.9.1</junit.jupiter.version>
@@ -44,19 +45,20 @@
     <!-- Hibernate -->
     <hibernate.version>5.6.14.Final</hibernate.version>
     <hibernate-validator.version>6.2.5.Final</hibernate-validator.version>
-
     <jsoup.version>1.14.3</jsoup.version>
     <javax-el.version>3.0.1-b12</javax-el.version>
 
     <!--Cache-->
-    <ehcache.version>3.9.9</ehcache.version>
+    <ehcache.version>3.9.0</ehcache.version>
+    <ehcache-api.version>1.1.0</ehcache-api.version>
 
     <!--webjars-->
-    <webjars-jquery.version>3.6.1</webjars-jquery.version>
-    <webjars-bootstrap.version>4.6.2</webjars-bootstrap.version>
-    <webjars-datatables.version>1.12.1</webjars-datatables.version>
+    <webjars-bootstrap.version>4.5.3</webjars-bootstrap.version>
+    <webjars-jquery.version>3.5.1</webjars-jquery.version>
     <webjars-datetimepicker.version>2.5.20-1</webjars-datetimepicker.version>
     <webjars-noty.version>3.1.4</webjars-noty.version>
+    <webjars-datatables.version>1.12.1</webjars-datatables.version>
+
   </properties>
 
   <build>
@@ -66,7 +68,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.8.1</version>
+        <version>3.10.1</version>
         <configuration>
           <source>${java.version}</source>
           <target>${java.version}</target>
@@ -128,13 +130,13 @@
 
     <dependency>
       <groupId>org.slf4j</groupId>
-      <artifactId>jul-to-slf4j</artifactId> <!--2.0.3--><!--+-->
+      <artifactId>jul-to-slf4j</artifactId>
       <version>${slf4j.version}</version>
     </dependency>
 
     <dependency>
       <groupId>ch.qos.logback</groupId>
-      <artifactId>logback-classic</artifactId> <!--1.4.4--><!--+-->
+      <artifactId>logback-classic</artifactId>
       <version>${logback.version}</version>
       <scope>runtime</scope>
     </dependency>
@@ -142,7 +144,7 @@
     <dependency>
       <groupId>javax.annotation</groupId>
       <artifactId>javax.annotation-api</artifactId>
-      <version>1.3.2</version>
+      <version>${javax-annotation-api.version}</version>
     </dependency>
 
     <!-- Spring -->
@@ -159,12 +161,12 @@
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger2</artifactId> <!--3.0.0-->
-      <version>2.9.2</version>
+      <version>${springfox-swagger.version}</version>
     </dependency>
     <dependency>
       <groupId>io.springfox</groupId>
       <artifactId>springfox-swagger-ui</artifactId>
-      <version>2.9.2</version>
+      <version>${springfox-swagger.version}</version>
     </dependency>
 
     <!-- security -->
@@ -218,20 +220,26 @@
     <dependency>
       <groupId>javax.cache</groupId>
       <artifactId>cache-api</artifactId> <!--1.1.1--> <!--+-->
-      <version>1.1.1</version>
+      <version>${ehcache-api.version}</version>
     </dependency>
     <dependency>
       <groupId>org.ehcache</groupId>
       <artifactId>ehcache</artifactId> <!--3.10.2--> <!--?--> <!--3.9.9-->
       <scope>runtime</scope>
       <version>${ehcache.version}</version>
+      <exclusions>
+        <exclusion>
+          <groupId>org.glassfish.jaxb</groupId>
+          <artifactId>jaxb-runtime</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
 
     <!--https://medium.com/criciumadev/its-time-migrating-to-java-11-5eb3868354f9-->
     <dependency>
       <groupId>org.glassfish.jaxb</groupId>
-      <artifactId>jaxb-runtime</artifactId>   <!--4.0.1--> <!--?--> <!--4.0.0-->
-      <version>4.0.0</version>
+      <artifactId>jaxb-runtime</artifactId>
+      <version>2.4.0-b180830.0438</version>
     </dependency>
 
     <!--Web-->
@@ -251,7 +259,6 @@
     <dependency>
       <groupId>org.springframework</groupId>
       <artifactId>spring-webmvc</artifactId>
-
     </dependency>
 
     <!-- Webjars (static dependencies distributed as JAR files) -->
@@ -260,7 +267,6 @@
       <artifactId>jquery</artifactId>   <!--3.6.1--> <!--+-->
       <version>${webjars-jquery.version}</version>
     </dependency>
-
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>bootstrap</artifactId>  <!--5.2.2--> <!--?--> <!--4.6.2-->
@@ -277,7 +283,6 @@
         </exclusion>
       </exclusions>
     </dependency>
-
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>datatables</artifactId> <!--1.12.1--> <!--+-->
@@ -289,7 +294,6 @@
         </exclusion>
       </exclusions>
     </dependency>
-
     <dependency>
       <groupId>org.webjars</groupId>
       <artifactId>datetimepicker</artifactId>
@@ -339,8 +343,8 @@
     </dependency>
     <dependency>
       <groupId>junit</groupId>
-      <artifactId>junit</artifactId> <!--4.13.2--> <!--+-->
-      <version>4.13.2</version>
+      <artifactId>junit</artifactId>
+      <version>4.13</version>
       <scope>test</scope>
     </dependency>
     <dependency>
@@ -374,17 +378,19 @@
           <groupId>com.h2database</groupId>
           <artifactId>h2</artifactId>
           <version>${h2database.version}</version>
+          <scope>runtime</scope>
         </dependency>
       </dependencies>
     </profile>
 
     <profile>
-      <id>hsqldb</id>
+      <id>hsqldb-test</id>
       <dependencies>
         <dependency>
           <groupId>org.hsqldb</groupId>
           <artifactId>hsqldb</artifactId>
           <version>${hsqldb.version}</version>
+          <scope>test</scope>
         </dependency>
       </dependencies>
     </profile>
