--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
     <slf4j.version>2.0.3</slf4j.version>
     <javax-annotation-api.version>1.3.2</javax-annotation-api.version>
     <!--DB-->
-    <postgresql.version>42.2.14</postgresql.version>
+    <postgresql.version>42.5.0</postgresql.version>
     <hsqldb.version>2.7.0</hsqldb.version>
     <h2database.version>1.4.200</h2database.version>
 
@@ -114,7 +114,14 @@
           </deployables>
         </configuration>
       </plugin>
-
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.19.1</version>
+        <configuration>
+          <testFailureIgnore>true</testFailureIgnore>
+        </configuration>
+      </plugin>
     </plugins>
   </build>
 
@@ -378,7 +385,6 @@
           <groupId>com.h2database</groupId>
           <artifactId>h2</artifactId>
           <version>${h2database.version}</version>
-          <scope>runtime</scope>
         </dependency>
       </dependencies>
     </profile>
