--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,8 +7,8 @@
   <display-name>Vacancy</display-name>
   <context-param>
     <param-name>spring.profiles.default</param-name>
-<!--    <param-value>postgres</param-value>-->
-    <param-value>h2</param-value>
+    <param-value>postgres</param-value>
+<!--    <param-value>h2</param-value>-->
   </context-param>
 
   <context-param>
