--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -2,10 +2,16 @@ app.title=Search for IT vacancies
 app.footer=An application based on the example of
 
 user.name=name
+user.name_=name
 user.email=email
+user.email_=email
 user.roles=roles
 user.active=active
 user.registered=registered
+user.user_new= of new user
+user.add_new=Add new user
+user.password=password
+user.password_=password
 
 vacancy.vacancy=Vacancy
 vacancy.employer=Company
@@ -46,6 +52,7 @@ vacancy.kyiv=Kyiv
 
 common.add=Add
 common.back=Reset
+common.return=Return
 common.save=Save
 common.edit=Edit
 common.you_sure='Are you sure?'
@@ -64,6 +71,7 @@ login.doc=Documentation
 
 password.password=Password :
 password.confirm=Confirm :
+
 exception.error_data=Data Validation Error
 
 profile.profile=Profile
