--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -51,7 +51,8 @@ vacancy.refresh=Refresh
 vacancy.kyiv=Kyiv
 
 common.add=Add
-common.back=Reset
+common.close=Close
+common.reset=Reset
 common.return=Return
 common.save=Save
 common.edit=Edit
