--- a/pom.xml
+++ b/pom.xml
@@ -68,17 +68,33 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
-        <version>3.10.1</version>
+        <version>3.8.1</version>
         <configuration>
           <source>${java.version}</source>
           <target>${java.version}</target>
         </configuration>
       </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-war-plugin</artifactId>
+        <version>3.3.2</version>
+      </plugin>
+      <plugin>
+        <!--https://junit.org/junit5/docs/current/user-guide/#running-tests-build-maven -->
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>2.22.2</version>
+        <configuration>
+          <argLine>-Dfile.encoding=UTF-8</argLine>
+        </configuration>
+      </plugin>
 
+      <!-- http://stackoverflow.com/questions/4305935/is-it-possible-to-supply-tomcat6s-context-xml-file-via-the-maven-cargo-plugin#4417945 -->
+      <!-- https://codehaus-cargo.github.io/cargo/Tomcat+9.x.html -->
       <plugin>
         <groupId>org.codehaus.cargo</groupId>
-        <artifactId>cargo-maven2-plugin</artifactId>
-        <version>1.8.2</version>
+        <artifactId>cargo-maven3-plugin</artifactId>
+        <version>1.10.3</version>
         <configuration>
           <container>
             <containerId>tomcat9x</containerId>
@@ -112,14 +128,6 @@
               </properties>
             </deployable>
           </deployables>
-        </configuration>
-      </plugin>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.19.1</version>
-        <configuration>
-          <testFailureIgnore>true</testFailureIgnore>
         </configuration>
       </plugin>
     </plugins>
