22. i18n, debug_double_email

--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -1,17 +1,17 @@
 app.title=Search for IT vacancies
 app.footer=An application based on the example of
 
-user.name=name
+user.name=Name
 user.name_=name
-user.email=email
+user.email=Email
 user.email_=email
-user.roles=roles
+user.roles=Roles
 user.active=active
-user.registered=registered
-user.user_new= of new user
-user.add_new=Add new user
-user.password=password
+user.registered=Registered
+user.password=Password
 user.password_=password
+user.add=Add new user
+user.edit=Edit data for user
 
 vacancy.vacancy=Vacancy
 vacancy.employer=Company
@@ -26,15 +26,14 @@ vacancy.language=Programming language
 vacancy.language_=programming language
 vacancy.level=Level
 vacancy.workplace=Workplace
-vacancy.vew_vacancy= New vacancy
 vacancy.refresh_db=Refresh DB
 
 vacancy.vacancy_name=Vacancy name
 vacancy.vacancy_name_=vacancy name
-vacancy.from_cent=from (usd cent)
-vacancy.to_cent=to (usd cent)
-vacancy.from_cent_=salary min (usd cent)
-vacancy.to_cent_=salary max (usd cent)
+vacancy.from_cent=from ($US cent)
+vacancy.to_cent=to ($US cent)
+vacancy.from_cent_=salary min ($US cent)
+vacancy.to_cent_=salary max ($US cent)
 vacancy.url=url
 vacancy.skills_knowledge_experience=Skills, knowledge, experience...
 vacancy.skills_knowledge_experience_=required skills, knowledge, experience...
@@ -43,22 +42,29 @@ vacancy.please_enter=please enter any
 vacancy.please_enter_workplace=please enter the place of work you need
 vacancy.select_or_print_your=select or print your
 vacancy.print=print pls
-vacancy.workplace_=workplace
 vacancy.filter=Filter
-vacancy.wait=DB loading... wait 1-2 min...after 2 min set  
+vacancy.wait=Updating started, wait 1-2 min... than set  
 vacancy.refresh=Refresh  
+vacancy.add=Vacancy add
+vacancy.edit=Vacancy edit
 
 vacancy.kyiv=Kyiv
 
-common.add=Add
 common.close=Close
 common.reset=Reset
-common.return=Return
 common.save=Save
-common.edit=Edit
-common.you_sure='Are you sure?'
-
-body_header.profile=Profile
+common.deleted=Record deleted
+common.saved=Record saved
+common.enabled=Record enabled
+common.disabled=Record disabled
+common.select=Record selected
+common.deselected=Record unselected
+common.errorStatus=Error status
+common.errorType=Error type
+common.confirm=Are you sure?
+common.updated=Updating finished
+common.profile=Profile
+common.register=Registration of new user
 body_header.users=Users
 body_header.title=NEW programmer vacancies
 
@@ -67,7 +73,7 @@ login.registration=Registration &raquo;
 login.as_admin=Log-in as Admin
 login.as_user=Log-in as User
 login.project=Java Enterprise project
-login.body=with registration/authorization and role-based access rights (USER, ADMIN).<br/>Administrator can create/edit/delete users and vacancies, users can manage their profile via UI (via AJAX) and REST interface with basic authorization. Vacancies can be filtered/updated/marked (line color changes, individual choice is stored in the database).<br/>REST and all services are covered by JUnit tests using Spring MVC Test and Spring SecurityTest.<br/> HSQLDB is used for tests. Actual vacancies are stored in PostgreSQL (or H2DB), updated from resources:<br/>
+login.body=with registration | authorization and role-based access rights (USER, ADMIN).<br/>Administrator can create | edit | delete users and vacancies, users can manage their profile via UI (via AJAX) and REST interface with basic authorization. Vacancies can be filtered | updated | marked (color of row changes, individual choice is stored in DB).<br/>REST controllers and all services are covered by JUnit tests using Spring MVC Test and Spring SecurityTest.<br/> HSQLDB is used for tests. Actual vacancies are stored in PostgreSQL (or H2DB) and updated from resources:<br/>
 login.doc=Documentation
 
 password.password=Password :
@@ -75,5 +81,3 @@ password.confirm=Confirm :
 
 exception.error_data=Data Validation Error
 
-profile.profile=Profile
-profile.register=Register
