--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -30,10 +30,10 @@ vacancy.refresh_db=Refresh DB
 
 vacancy.vacancy_name=Vacancy name
 vacancy.vacancy_name_=vacancy name
-vacancy.from_cent=from ($US cent)
-vacancy.to_cent=to ($US cent)
-vacancy.from_cent_=salary min ($US cent)
-vacancy.to_cent_=salary max ($US cent)
+vacancy.from_cent=from ($USD cent)
+vacancy.to_cent=to ($USD cent)
+vacancy.from_cent_=salary min ($USD cent)
+vacancy.to_cent_=salary max ($USD cent)
 vacancy.url=url
 vacancy.skills_knowledge_experience=Skills, knowledge, experience...
 vacancy.skills_knowledge_experience_=required skills, knowledge, experience...
@@ -50,6 +50,7 @@ vacancy.edit=Vacancy edit
 
 vacancy.kyiv=Kyiv
 
+common.delete=Delete
 common.close=Close
 common.reset=Reset
 common.save=Save
@@ -60,8 +61,8 @@ common.disabled=Record disabled
 common.select=Record selected
 common.deselected=Record unselected
 common.errorStatus=Error status
-common.errorType=Error type
 common.confirm=Are you sure?
+common.confirm_label=Confirm pls !
 common.updated=Updating finished
 common.profile=Profile
 common.register=Registration of new user
