--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -12,7 +12,10 @@ user.password=Password
 user.password_=password
 user.add=Add new user
 user.edit=Edit data for user
+user.invite=You are registered already. Please Sign in
+user.duplicate=User exist already with Email: 
 
+vacancy.duplicate=Vacancy exist already 
 vacancy.vacancy=Vacancy
 vacancy.employer=Company
 vacancy.address=City
@@ -65,7 +68,7 @@ common.confirm=Are you sure?
 common.confirm_label=Confirm pls !
 common.updated=Updating finished
 common.profile=Profile
-common.register=Registration of new user
+common.register=Registration of new User
 body_header.users=Users
 body_header.title=NEW programmer vacancies
 
