--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -13,7 +13,7 @@ user.password_=password
 user.add=Add new user
 user.edit=Edit data for user
 user.invite=You are registered already. Please Sign in
-user.duplicate=User exist already with Email: 
+user.duplicate=User exist already with this Email
 
 vacancy.duplicate=Vacancy exist already 
 vacancy.vacancy=Vacancy
