--- a/pom.xml
+++ b/pom.xml
@@ -1,8 +1,7 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
-         http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
+
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>ua.training</groupId>
@@ -15,50 +14,49 @@
   <url>http://vacancy021.herokuapp.com/</url>
 
   <properties>
-    <java.version>15</java.version>
+    <java.version>17</java.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-    <spring.version>5.3.20</spring.version>
-    <spring.security.version>5.7.5</spring.security.version>
-    <spring-data-jpa.version>2.7.5</spring-data-jpa.version>
-
+    <spring.version>5.3.24</spring.version>
+    <spring.security.version>5.8.0</spring.security.version>
+    <spring-data-jpa.version>2.7.6</spring-data-jpa.version>
     <springfox-swagger.version>2.9.2</springfox-swagger.version>
-    <jackson-json.version>2.14.0</jackson-json.version>
-    <tomcat.version>9.0.41</tomcat.version>
+    <jackson.version>2.14.1</jackson.version>
+    <tomcat.version>9.0.68</tomcat.version>
 
     <!-- Logging -->
     <logback.version>1.4.4</logback.version>
     <slf4j.version>2.0.3</slf4j.version>
+
     <javax-annotation-api.version>1.3.2</javax-annotation-api.version>
     <!--DB-->
     <postgresql.version>42.5.0</postgresql.version>
     <hsqldb.version>2.7.0</hsqldb.version>
     <h2database.version>1.4.200</h2database.version>
 
-    <!--    Tests  -->
-    <junit.jupiter.version>5.9.1</junit.jupiter.version>
-    <assertj.version>3.23.1</assertj.version>
-    <hamcrest.version>2.2</hamcrest.version>
-    <json-path.version>2.7.0</json-path.version>
-
     <!-- Hibernate -->
-    <hibernate.version>5.6.14.Final</hibernate.version>
+    <hibernate.version>5.6.12.Final</hibernate.version>
     <hibernate-validator.version>6.2.5.Final</hibernate-validator.version>
     <jsoup.version>1.14.3</jsoup.version>
     <javax-el.version>3.0.1-b12</javax-el.version>
 
     <!--Cache-->
-    <ehcache.version>3.9.0</ehcache.version>
+    <ehcache.version>3.10.2</ehcache.version>
     <ehcache-api.version>1.1.0</ehcache-api.version>
 
     <!--webjars-->
-    <webjars-bootstrap.version>4.5.3</webjars-bootstrap.version>
-    <webjars-jquery.version>3.5.1</webjars-jquery.version>
+    <webjars-bootstrap.version>4.6.2</webjars-bootstrap.version>
+    <webjars-jquery.version>3.6.1</webjars-jquery.version>
     <webjars-datetimepicker.version>2.5.20-1</webjars-datetimepicker.version>
     <webjars-noty.version>3.1.4</webjars-noty.version>
-    <webjars-datatables.version>1.12.1</webjars-datatables.version>
+    <webjars-datatables.version>1.13.1</webjars-datatables.version>
 
+    <!--    Tests  -->
+    <junit.jupiter.version>5.9.1</junit.jupiter.version>
+    <assertj.version>3.23.1</assertj.version>
+    <hamcrest.version>2.2</hamcrest.version>
+    <json-path.version>2.7.0</json-path.version>
   </properties>
 
   <build>
@@ -134,19 +132,12 @@
   </build>
 
   <dependencies>
-
     <!-- Logging with SLF4J & LogBack -->
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
       <version>${slf4j.version}</version>
       <scope>compile</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>org.slf4j</groupId>
-      <artifactId>jul-to-slf4j</artifactId>
-      <version>${slf4j.version}</version>
     </dependency>
 
     <dependency>
@@ -159,16 +150,16 @@
     <dependency>
       <groupId>javax.annotation</groupId>
       <artifactId>javax.annotation-api</artifactId>
-      <version>${javax-annotation-api.version}</version>
+      <version>1.3.2</version>
     </dependency>
 
     <!-- Spring -->
     <dependency>
       <groupId>org.springframework</groupId>
-      <artifactId>spring-context-support</artifactId> <!--5.3.23-->  <!--+-->
+      <artifactId>spring-context-support</artifactId>
     </dependency>
     <dependency>
-      <groupId>org.springframework.data</groupId> <!--2.7.5-->        <!--+-->
+      <groupId>org.springframework.data</groupId>
       <artifactId>spring-data-jpa</artifactId>
       <version>${spring-data-jpa.version}</version>
     </dependency>
@@ -184,10 +175,10 @@
       <version>${springfox-swagger.version}</version>
     </dependency>
 
-    <!-- security -->
+    <!--security-->
     <dependency>
       <groupId>org.springframework.security</groupId>
-      <artifactId>spring-security-web</artifactId> <!--5.7.5-->    <!--+-->
+      <artifactId>spring-security-web</artifactId>
       <version>${spring.security.version}</version>
     </dependency>
     <dependency>
@@ -204,18 +195,13 @@
     <!--- ORM -->
     <dependency>
       <groupId>org.hibernate</groupId>
-      <artifactId>hibernate-core</artifactId>  <!--6.1.5.Final--> <!--!!!???--> <!--5.6.14-->
+      <artifactId>hibernate-core</artifactId>
       <version>${hibernate.version}</version>
     </dependency>
     <dependency>
       <groupId>org.hibernate.validator</groupId>
       <artifactId>hibernate-validator</artifactId>
-      <version>${hibernate-validator.version}</version> <!--8.0.0.Final--> <!--???--> <!--6.2.5-->
-    </dependency>
-    <dependency>
-      <groupId>org.jsoup</groupId>
-      <artifactId>jsoup</artifactId> <!--1.15.3-->   <!--???-->
-      <version>${jsoup.version}</version>
+      <version>${hibernate-validator.version}</version>
     </dependency>
     <dependency>
       <groupId>org.hibernate</groupId>
@@ -226,7 +212,7 @@
     <!--http://hibernate.org/validator/documentation/getting-started/#unified-expression-language-el-->
     <dependency>
       <groupId>org.glassfish</groupId>
-      <artifactId>javax.el</artifactId>   <!--3.0.1-b12-->
+      <artifactId>javax.el</artifactId>
       <version>${javax-el.version}</version>
       <scope>provided</scope>
     </dependency>
@@ -234,12 +220,12 @@
     <!-- Cache -->
     <dependency>
       <groupId>javax.cache</groupId>
-      <artifactId>cache-api</artifactId> <!--1.1.1--> <!--+-->
+      <artifactId>cache-api</artifactId>
       <version>${ehcache-api.version}</version>
     </dependency>
     <dependency>
       <groupId>org.ehcache</groupId>
-      <artifactId>ehcache</artifactId> <!--3.10.2--> <!--?--> <!--3.9.9-->
+      <artifactId>ehcache</artifactId>
       <scope>runtime</scope>
       <version>${ehcache.version}</version>
       <exclusions>
@@ -260,7 +246,7 @@
     <!--Web-->
     <dependency>
       <groupId>org.apache.tomcat</groupId>
-      <artifactId>tomcat-servlet-api</artifactId> <!--10.1.1--> <!--?--> <!--9.0.68-->
+      <artifactId>tomcat-servlet-api</artifactId>
       <version>${tomcat.version}</version>
       <scope>provided</scope>
     </dependency>
@@ -279,12 +265,12 @@
     <!-- Webjars (static dependencies distributed as JAR files) -->
     <dependency>
       <groupId>org.webjars</groupId>
-      <artifactId>jquery</artifactId>   <!--3.6.1--> <!--+-->
+      <artifactId>jquery</artifactId>
       <version>${webjars-jquery.version}</version>
     </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
-      <artifactId>bootstrap</artifactId>  <!--5.2.2--> <!--?--> <!--4.6.2-->
+      <artifactId>bootstrap</artifactId>
       <version>${webjars-bootstrap.version}</version>
       <exclusions>
         <exclusion>
@@ -300,7 +286,7 @@
     </dependency>
     <dependency>
       <groupId>org.webjars</groupId>
-      <artifactId>datatables</artifactId> <!--1.12.1--> <!--+-->
+      <artifactId>datatables</artifactId>
       <version>${webjars-datatables.version}</version>
       <exclusions>
         <exclusion>
@@ -324,35 +310,35 @@
     <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
-      <version>${jackson-json.version}</version>
+      <version>${jackson.version}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
       <artifactId>jackson-datatype-hibernate5</artifactId>
-      <version>${jackson-json.version}</version>
+      <version>${jackson.version}</version>
     </dependency>
     <dependency>
       <groupId>com.fasterxml.jackson.datatype</groupId>
-      <artifactId>jackson-datatype-jsr310</artifactId> <!--2.14.0--> <!--+-->
-      <version>${jackson-json.version}</version>
+      <artifactId>jackson-datatype-jsr310</artifactId>
+      <version>${jackson.version}</version>
     </dependency>
 
     <!--Test-->
     <dependency>
       <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId> <!--5.9.1--> <!--+-->
+      <artifactId>junit-jupiter-engine</artifactId>
       <version>${junit.jupiter.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>org.hamcrest</groupId>
-      <artifactId>hamcrest-core</artifactId> <!--2.2--> <!--+-->
+      <artifactId>hamcrest-core</artifactId>
       <version>${hamcrest.version}</version>
       <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>com.jayway.jsonpath</groupId>
-      <artifactId>json-path</artifactId> <!--2.7.0--> <!--+-->
+      <artifactId>json-path</artifactId>
       <version>${json-path.version}</version>
       <scope>test</scope>
     </dependency>
@@ -370,14 +356,14 @@
 
     <dependency>
       <groupId>org.springframework.security</groupId>
-      <artifactId>spring-security-test</artifactId>  <!--5.7.5--> <!--+-->
+      <artifactId>spring-security-test</artifactId>
       <version>${spring.security.version}</version>
       <scope>test</scope>
     </dependency>
 
     <dependency>
       <groupId>org.assertj</groupId>
-      <artifactId>assertj-core</artifactId> <!--3.23.1-->
+      <artifactId>assertj-core</artifactId>
       <version>${assertj.version}</version>
       <scope>test</scope>
     </dependency>
@@ -390,8 +376,19 @@
       <scope>test</scope>
     </dependency>
 
-  </dependencies>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>jul-to-slf4j</artifactId>
+      <version>${slf4j.version}</version>
+    </dependency>
 
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId> <!--1.15.3-->   <!--???-->
+      <version>${jsoup.version}</version>
+    </dependency>
+
+  </dependencies>
 
   <profiles>
 
