--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -53,6 +53,7 @@ vacancy.edit=Vacancy edit
 
 vacancy.kyiv=Kyiv
 
+common.search=Search
 common.delete=Delete
 common.close=Close
 common.reset=Reset
@@ -63,7 +64,6 @@ common.enabled=Record enabled
 common.disabled=Record disabled
 common.select=Record selected
 common.deselected=Record unselected
-common.errorStatus=Error status
 common.confirm=Are you sure?
 common.confirm_label=Confirm pls !
 common.updated=Updating finished
@@ -84,4 +84,18 @@ password.password=Password :
 password.confirm=Confirm :
 
 exception.error_data=Data Validation Error
+
+error.appError=Application error
+error.dataNotFound=Data not found
+error.dataError=Data error
+error.validationError=Validation error
+error.wrongRequest=Wrong request
+
+NotEmpty=[{0}] must not be empty
+NotBlank=[{0}] must not be empty
+NotNull=[{0}] must not be empty
+Email= Invalid format of [{0}]
+Range=[{0}] must be between {2} and {1}
+Length=[{0}] length must be between {2} and {1}
+Size=[{0}] size must be between {2} and {1}
 
